--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=NAME_SQL;Integrated Security=True;TrustServerCertificate=True"
+    "Default": "Server=localhost;Database=PartTimeJobs;Integrated Security=True;TrustServerCertificate=True"
   },
   "Jwt": {
-    "Key": "KEY",
+    "Key": "E3k!xRz#8tN2q@pF7vL1sWmG9yZ$DhU5aB*JrT0oC^KfX6iHnP%",
     "Issuer": "ptj-api",
     "Audience": "ptj-client",
     "ExpiresMinutes": 60,
