lọc theo ngành, mức lương, ca  làm

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=NAME_SQL;Integrated Security=True;TrustServerCertificate=True"
+    "Default": "Server=localhost\\SQLEXPRESS;Database=PartTimeJobs;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Jwt": {
-    "Key": "KEY",
+    "Key": "minhdepzaivaicadaivacothelamnothegioi",
     "Issuer": "ptj-api",
     "Audience": "ptj-client",
     "ExpiresMinutes": 60,
