Sửa logic cho services Search

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # ASP.NET / .NET build files
 bin/
 obj/
+uploads/
 *.user
 *.suo
 *.vspscc
@@ -19,6 +20,7 @@ appsettings.Local.json
 appsettings.*.json
 secrets.json
 Dangnhap.txt
+appsettings.json
 
 # Environment files
 .env
